# entity-diambiguation-luke

./: .gitignore  cli.py  config.json  config.yaml  main.py  pyproject.toml
.circleci/: config.yml
entity_disambiguation/: model.py
examples/: cli.py
examples/bucc/: evaluate.py  evaluator.py  reader.py
examples/cross_lingual_ner/: model.py  reader.py
examples/entity_typing/: README.md  evaluate_transformers_checkpoint.py  model.py  reader.py
examples/entity_typing_allennlp/: model.py  reader.py
examples/lareqa/: model.py  reader.py  utils.py
examples/ner/: README.md  evaluate_transformers_checkpoint.py  model.py  reader.py
examples/ner_allennlp/: README.md
examples/reading_comprehension/: main.py
examples/reading_comprehension_allennlp/: model.py
examples/relation_classification/: README.md  evaluate_transformers_checkpoint.py  reader.py
examples/relation_classification_allennlp/: reader.py
examples/tydi_qa/: model.py  reader.py
examples/utils/: entity_db.py  luke_embedder.py  mention_db.py  span_utils.py  wiki_mention_detector.py
examples/xling_ner/: model.py  reader.py
examples/xling_relation_classification/: model.py  reader.py
examples_allennlp/bucc/: evaluate.py  evaluator.py  reader.py
examples_allennlp/entity_typing/: README.md  evaluate_transformers_checkpoint.py
examples_allennlp/lareqa/: model.py  reader.py
examples_allennlp/ner/: evaluate_transformers_checkpoint.py
examples_allennlp/reading_comprehension/: model.py
luke/: cli.py  model.py
luke/pretraining/: dataset.py  (+4 more)
utils/: dataset.py  evaluate.py  trainer.py
(+139 files in other folders)
