[tool.poetry]
authors = ["Ikuya Yamada <ikuya@ousia.jp>"]
description = ""
name = "luke"
version = "0.1.0"

[tool.poetry.dependencies]
Click = "*"
comet-ml = {version = "*", optional ma= true}
joblib = "*"
marisa-trie = "*"
numpy = "*"
pyicu = {version = "*", optional = true}
pyjnius = {version = "*", optional = true}
python = "^3.6.1"
sentencepiece = "*"
seqeval = "*"
tensorflow = "1.15.3"
torch = "*"
tqdm = "*"
transformers = "4.6.0"
ujson = "*"
wikipedia2vec = "*"
allennlp = "2.5.0"
jupyter = {version = "^1.0.0", optional = true}
matplotlib = {version = "^3.3.4", optional = true}
allennlp-models = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.780"
pre-commit = "^2.5.1"
pytest = "^5.2"

[tool.poetry.extras]
comet = ["comet-ml"]
icu = ["pyicu"]
opennlp = ["pyjnius"]
dev_utils = ["jupyter", "matplotlib"]

[tool.poetry.scripts]
luke = 'luke.cli:cli'

[tool.black]
line-length = 120

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]